--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     background: whitesmoke;
 }
 
+.title:hover {
+    color: purple;
+}
+
 button {
     padding: 8px;
     outline: none;
@@ -22,6 +26,7 @@ button {
 
 button:hover {
     background-color: rgba(0, 0, 0, 0.1);
+    color: purple;
 }
 
 .container {
@@ -31,6 +36,7 @@ button:hover {
 
 header {
     background-color: #fff;
+    box-shadow: 0px 0px 8px 0px rgba(72, 0, 51, 0.9);
 }
 
 #header {
@@ -54,7 +60,7 @@ header {
     padding: 20px;
     margin-top: 10px;
     background: whitesmoke;
-    box-shadow: 0px 2px 4px 0px rgba(72, 0, 51, 0.9);
+    box-shadow: 0px 3px 6px 0px rgba(72, 0, 51, 0.9);
 }
 
 #createCard h2 {
@@ -109,7 +115,7 @@ header {
 }
 
 .fa-minus:hover {
-    color: pruple;
+    color: purple;
 }
 
 @media(max-width:1280px) {
